--- a/package.json
+++ b/package.json
@@ -96,35 +96,39 @@
     "files": [
       "./test/**/*.js"
     ],
-    "sources": [
+    "ignoredByWatcher": [
       "./src/**/*.js"
     ],
     "require": [
       "esm",
       "./test/_browserENV.js"
+    ],
+    "nodeArguments": [
+      "--experimental-modules"
     ]
   },
   "devDependencies": {
-    "@tweenjs/tween.js": "^17.4.0",
-    "ava": "^2.1.0",
-    "browser-env": "^3.2.6",
-    "concurrently": "^4.1.0",
-    "coveralls": "^3.0.4",
-    "docdash": "^1.1.1",
-    "eslint": "^5.16.0",
-    "google-closure-compiler": "^20190528.0.0",
-    "http-server": "^0.11.1",
-    "jsdoc": "^3.6.2",
+    "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-inject": "^4.0.1",
+    "@rollup/plugin-json": "^4.0.2",
+    "@rollup/plugin-node-resolve": "^7.1.1",
+    "@tweenjs/tween.js": "^18.5.0",
+    "ava": "^3.5.0",
+    "browser-env": "^3.3.0",
+    "concurrently": "^5.1.0",
+    "coveralls": "^3.0.11",
+    "docdash": "^1.2.0",
+    "eslint": "^6.8.0",
+    "esm": "^3.2.25",
+    "google-closure-compiler": "^20200315.0.0",
+    "http-server": "^0.12.1",
+    "jsdoc": "^3.6.3",
+    "local-web-server": "^3.0.7",
     "nyc": "^14.1.1",
-    "rollup": "^1.15.1",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-inject": "^2.2.0",
-    "rollup-plugin-json": "^4.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "three": "^0.105.2",
+    "rollup": "^2.3.2",
+    "three": "^0.115.0",
     "xmlhttprequest": "^1.8.0"
   },
-  "dependencies": {},
   "jspm": {
     "files": [
       "build/panolens.js",
