--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "nyc --reporter=html --reporter=text ava",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "start": "npm run dev",
+    "update:website": "npm run build-closure && cp build/panolens.min.js public/js/panolens/ && cp node_modules/three/build/three.min.js public/js/three/",
     "docs": "node_modules/.bin/jsdoc -c jsdoc.json -d ./docs",
     "travis": "npm run lint && npm test",
     "prepublishOnly": "npm run test && npm run build-closure",
@@ -121,7 +122,7 @@
     "eslint": "^6.8.0",
     "esm": "^3.2.25",
     "google-closure-compiler": "^20200315.0.0",
-    "http-server": "^0.12.1",
+    "http-server": "^0.12.3",
     "jsdoc": "^3.6.3",
     "local-web-server": "^3.0.7",
     "nyc": "^14.1.1",
